force-app/main/default/objects/Stock_Transfer_Item__c/Stock_Transfer_Item__c.object-meta.xml
<CustomObject>
    <label>Stock Transfer Item</label>
    <nameField>
        <displayFormat>STA{000000}</displayFormat>
        <label>Stock Transfer Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Transfer Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>