force-app/main/default/objects/Stock_Transfer_Item__c/fields/Quantity_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sent__c</fullName>
    <label>Quantity Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>