force-app/main/default/objects/Stock_Transfer_Item__c/fields/Stock_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer__c</fullName>
    <label>Stock Transfer</label>
    <referenceTo>Stock_Transfer__c</referenceTo>
    <relationshipLabel>Stock Transfer Items</relationshipLabel>
    <relationshipName>Stock_Transfer_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>